AppNav: added sign out and learn links to mobile drawer. Also fixed the issue where the hamburger icon was overlapping with book icon.

--- a/src/Styles/AppNavStyles.css
+++ b/src/Styles/AppNavStyles.css
@@ -22,7 +22,7 @@
 }
 
 .rightSideLogoCont{
-    margin-top: 25px;
+
 }
 
 .content {
@@ -40,13 +40,18 @@
     margin-top: 13px;
 }
 
+div.mdl-layout__drawer-button{
+    margin-top: 39px;
+    margin-left: 10px;
+}
+
 .profileIcon{
     font-size: 35px;
 }
 
 .centerLogo {
     max-height: 100px;
-    margin-right: 10px;
+    margin-right: 15px;
 }
 
 .phxConsciousText {
